--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,4 +27,16 @@
       before:rounded-bl before:bg-black before:transition-all before:duration-200 
       hover:before:scale-x-100;
   }
+
+  .borderGradient {
+    text-align: center;
+    padding-bottom: 5px;
+    background: linear-gradient(to right, #ec4899, #8b5cf6) left bottom
+      no-repeat;
+    background-size: 100% 2px;
+  }
+
+  .tabPanel {
+    @apply grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3;
+  }
 }
