add hover state to cards and cart icons

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,7 +32,12 @@
     background: linear-gradient(to right, #93c5fd, #8b5cf6) left bottom
       no-repeat;
   }
-
+  .bg-primary-dark {
+    background-color: #35383c;
+  }
+  .bg-primary-dark-200 {
+    background-color: #35383c95;
+  }
   .borderGradient {
     text-align: center;
     padding-bottom: 5px;
